--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,4 @@
-﻿body
-{
-}
-
-/* stylelint-disable property-no-vendor-prefix */
+﻿/* stylelint-disable property-no-vendor-prefix */
 
 /*
  * Globals
@@ -33,14 +29,13 @@ a:hover {
 html,
 body {
     height: 100%;
-    background-color: #333;
+    background-color: #fff;
+    color: #292929;
+    text-align: center;
+    text-shadow: 0 1px 3px #ffd4d4;
 }
 
-body {
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
-}
+
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
@@ -49,7 +44,7 @@ body {
     height: 100%; /* For at least Firefox */
     min-height: 100%;
     -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 100px #d82d2d80;
 }
 
 .site-wrapper-inner {
@@ -118,7 +113,9 @@ body {
     }
 }
 
-
+h1 {
+    color: black;
+}
 /*
  * Cover
  */
@@ -143,9 +140,21 @@ body {
 }
 
 
-/*
- * Affix and center
- */
+#sample {
+    ... -webkit-transition: 5s ease-in-out;
+    -moz-transition: 5s ease-in-out;
+    -o-transition: 5s ease-in-out;
+    transition: 5s ease-in-out;
+}
+
+    #sample:hover {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+        left: calc(100% - 102px);
+    }
 
 @media (min-width: 768px) {
     /* Pull out the header and footer */
