--- a/assets/style.css
+++ b/assets/style.css
@@ -115,6 +115,7 @@ body {
 
 h1 {
     color: black;
+
 }
 /*
  * Cover
@@ -145,6 +146,9 @@ h1 {
     -moz-transition: 5s ease-in-out;
     -o-transition: 5s ease-in-out;
     transition: 5s ease-in-out;
+    border-radius:;
+    border-style: none;
+    border-radius: 220%;
 }
 
     #sample:hover {
