--- a/assets/style.css
+++ b/assets/style.css
@@ -159,14 +159,350 @@ h1 {
         transform: rotate(360deg);
         left: calc(100% - 102px);
     }
-    
+
 
 #hidden-section {
-    display:none;
-    background-color:gold;
-    padding:5%;
-
+    display: none;
+    background-color: gold;
+    padding: 5%;
+    max-width: 250px;
+    max-height: 250px;
 }
+
+/*Button*/
+.btn btn-lg btn-default {
+    color: black;
+    padding:5%;
+}
+/*Windows CSS*/
+.test-container {
+    
+    
+    background-image: url("http://thetechservice.net/temp/OGMQFU0.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 250px;
+    max-height: 250px;
+}
+
+.shape-container {
+    position: relative;
+    width: 1245px;
+    height: 740px;
+    margin: 10px;
+}
+
+.test-txt {
+    color: white;
+    text-align: center;
+    margin-top: 630px;
+    font-size: 130%;
+    z-index: 6;
+    /*   animation-name: test;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-timing-functions: ease-in;
+  animation-fill-mode: forwards; */
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-top {
+    text-align: center;
+    vertial-align: center;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://stockphotos.io/wp-content/uploads/2013/04/1440266336e1c53.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    clip-path: polygon(50% 10%, 66.6% 25.4%, 66.6% 99.5%, 33.4% 99.5%, 33.4% 25.4%);
+    /*   clip-path: polygon(50% 10%, 66.6% 25.4%, 66.6% 39.3%, 59% 48%, 59% 99.4%, 40.85% 99.4%, 40.85% 48%, 33.4% 39.3%, 33.4% 25.4%); */
+    animation-name: window-top;
+    animation-duration: 3s;
+    animation-delay: 0s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-top-outer {
+    position: relative;
+    background: white;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    clip-path: polygon( 50% 9%, /*50% 10%, top */
+    67.1% 24.9%, /*66.6% 25.4%, top right*/
+    67.1% 40%, /*66.6% 39.3%, mid right*/
+    /*59.78% 48.5%,*/ /*59% 48%,  mid inner right*/
+    67.1% /*59.78%*/ 100%, /*59% 100%, bot right */
+    32.9% /*40.22%*/ 100%, /*41% 100%, bot left */
+    /*40.22% 48.5%,*/ /*41% 48%, mid inner left*/
+    32.9% 40%, /*%33.4 39.3%, mid left*/
+    32.9% 24.9% /*33.4% 25.4% top left*/
+    );
+    animation-name: test-outer;
+    animation-duration: 1s;
+    animation-delay: 3.25s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-left {
+    position: absolute;
+    left: 2px;
+    bottom: 0;
+    width: 66%;
+    height: 60%;
+    background-image: url('https://stockphotos.io/wp-content/uploads/2013/04/1444776521a3b5c-600x400.jpg');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+    clip-path: polygon(50% 0, 61.1% 14.1%, 61.1% 99.1%, 38.9% 99.1%, 38.9% 14.1%);
+    /*clip-path: polygon(50% 0, 61.1% 14.1%, 61.1% 100%, 50.70% 100%, 50.70% 47.7%, 38.9% 32%,  38.9% 14.1%);*/
+    animation-name: test;
+    animation-duration: 3s;
+    animation-delay: 0.5s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    filter: brightness(0.5);
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-left-outer {
+    background: white;
+    position: absolute;
+    left: -3px;
+    bottom: 0px;
+    width: 66%;
+    height: 60.75%;
+    z-index: 1;
+    clip-path: polygon( 50.58% 0, 62.36% 14.6%, 62.36% 100%, 38.8% 100%, 38.8% 14.6% );
+    animation-name: test-outer;
+    animation-duration: 1s;
+    animation-delay: 3.25s;
+    animation-timing-functions: step-end;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-left-far {
+    position: absolute;
+    left: -97px;
+    bottom: 0;
+    width: 66.5%;
+    height: 40%;
+    z-index: 3;
+    background-image: url('https://www.almanac.com/sites/default/files/image_nodes/hydrangea-1715775_640_copy.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top;
+    -webkit-clip-path: polygon(0 12%, 0 86%, 35% 50%);
+    clip-path: polygon(50% 0, 61.1% 22.1%, 61.1% 98.75%, 38.9% 98.75%, 38.9% 22.1%);
+    animation-name: test;
+    animation-duration: 3s;
+    animation-delay: 1s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    filter: brightness(0.5);
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-left-far-outer {
+    position: absolute;
+    left: -101px;
+    bottom: 0;
+    width: 66.5%;
+    height: 41%;
+    background: white;
+    z-index: 2;
+    clip-path: polygon( 50.58% 0, 62.36% 22.9%, 62.36% 100%, 38.8% 100%, 38.8% 22.9% );
+    animation-name: test-outer;
+    animation-duration: 1s;
+    animation-delay: 3.25s;
+    animation-timing-functions: step-end;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-right {
+    position: absolute;
+    left: 420px;
+    bottom: 0;
+    width: 66%;
+    height: 60%;
+    background: white;
+    background-image: url('https://stockphotos.io/wp-content/uploads/2013/04/1392862201a4e2c-600x450.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 2;
+    clip-path: polygon( 50% 0, 61.1% 14.1%, 61.1% 99.1%, 38.9% 99.1%, 38.9% 14.1% );
+    animation-name: test;
+    animation-duration: 3s;
+    animation-delay: 0.5s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    filter: brightness(0.5);
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-right-outer {
+    background: white;
+    position: absolute;
+    left: 415px;
+    bottom: 0px;
+    width: 66%;
+    height: 60.75%;
+    z-index: 1;
+    clip-path: polygon( 50.58% 0, 62.36% 14.6%, 62.36% 100%, 38.8% 100%, 38.8% 14.6% );
+    animation-name: test-outer;
+    animation-duration: 1s;
+    animation-delay: 3.25s;
+    animation-timing-functions: step-end;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-right-far {
+    position: absolute;
+    left: 511px;
+    bottom: 0;
+    width: 66.5%;
+    height: 40%;
+    background-image: url('https://stockphotos.io/wp-content/uploads/2013/04/13695147721b2ec-600x899.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    z-index: 3;
+    -webkit-clip-path: polygon(0 12%, 0 86%, 35% 50%);
+    clip-path: polygon(50% 0, 61.1% 22.1%, 61.1% 98.75%, 38.9% 98.75%, 38.9% 22.1%);
+    animation-name: test;
+    animation-duration: 3s;
+    animation-delay: 1s;
+    animation-timing-functions: ease-in;
+    animation-fill-mode: forwards;
+    filter: brightness(0.5);
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-right-far-outer {
+    position: absolute;
+    left: 507px;
+    bottom: 0;
+    width: 66.5%;
+    height: 41%;
+    background: white;
+    z-index: 2;
+    clip-path: polygon( 50.58% 0, 62.36% 22.9%, 62.36% 100%, 38.8% 100%, 38.8% 22.9% );
+    animation-name: test-outer;
+    animation-duration: 1s;
+    animation-delay: 3.25s;
+    animation-timing-functions: step-end;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-left:hover, .shape-right:hover, .shape-left-far:hover, .shape-right-far:hover {
+    z-index: 6;
+    filter: brightness(1);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.shape-top:hover {
+    z-index: 6;
+    filter: brightness(1);
+    clip-path: polygon(50% 10%, 66.6% 25.4%, 66.6% 99.5%, 33.4% 99.5%, 33.4% 25.4%);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+@-webkit-keyframes test {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes test-outer {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes window-top {
+    0% {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 @media (min-width: 768px) {
     /* Pull out the header and footer */
     .masthead {
