Placing z-index on button to get back to main menu.

--- a/assets/style.css
+++ b/assets/style.css
@@ -187,6 +187,12 @@ h1 {
  100%{top:0em;}
 }
 
+/*Reveret Button*/
+#exit-button {
+    z-index: 1000;
+    position: relative;
+}
+
 /*Button*/
 .btn btn-lg btn-default {
     color: black;
